crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/050.cypher
MATCH (n) RETURN n.data; MATCH (n) WHERE id(n) = 0 RETURN n
